--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            /* Light gray background gradient as requested */
             background: linear-gradient(135deg, #f2f3f4 0%, #ccd1d1 100%);
             display: flex;
             justify-content: center;
@@ -23,17 +22,14 @@
             overflow: hidden;
             position: relative;
         }
-
-        /* Abstract background shapes for dynamism - adjusted for light background */
         body::before, body::after {
             content: '';
             position: absolute;
             border-radius: 50%;
-            background: rgba(0, 0, 0, 0.05); /* Subtle dark transparency for visibility on light bg */
+            background: rgba(0, 0, 0, 0.05);
             filter: blur(70px);
             z-index: -1;
         }
-
         body::before {
             width: 350px;
             height: 350px;
@@ -41,7 +37,6 @@
             left: -80px;
             animation: float1 15s infinite ease-in-out;
         }
-
         body::after {
             width: 450px;
             height: 450px;
@@ -49,7 +44,6 @@
             right: -100px;
             animation: float2 18s infinite ease-in-out;
         }
-
         @keyframes float1 {
             0%, 100% { transform: translate(0, 0); }
             50% { transform: translate(20px, 30px); }
@@ -58,21 +52,17 @@
             0%, 100% { transform: translate(0, 0); }
             50% { transform: translate(-30px, -20px); }
         }
-
-        /* Form container with a modern, slightly elevated look */
         .modern-vibrant-card {
-            background-color: #ffffff; /* Pure white card */
-            border: 1px solid rgba(0, 0, 0, 0.1); /* Subtle border */
-            box-shadow: 0 25px 60px rgba(0, 0, 0, 0.2); /* Stronger, more defined shadow */
+            background-color: #ffffff;
+            border: 1px solid rgba(0, 0, 0, 0.1);
+            box-shadow: 0 25px 60px rgba(0, 0, 0, 0.2);
             transition: all 0.4s ease-in-out;
-            transform: rotateZ(-1deg); /* Slight initial rotation */
+            transform: rotateZ(-1deg);
         }
         .modern-vibrant-card:hover {
-            transform: rotateZ(0deg) translateY(-5px); /* Straighten and lift on hover */
-            box-shadow: 0 35px 80px rgba(0, 0, 0, 0.3); /* Even deeper shadow on hover */
+            transform: rotateZ(0deg) translateY(-5px);
+            box-shadow: 0 35px 80px rgba(0, 0, 0, 0.3);
         }
-
-        /* Custom styles for the message box */
         .message-box {
             position: fixed;
             top: 20px;
@@ -102,8 +92,6 @@
             color: #991b1b;
             border: 1px solid #ef4444;
         }
-
-        /* Input group styling for icon and input */
         .input-group {
             position: relative;
         }
@@ -112,68 +100,59 @@
             left: 1rem;
             top: 70%;
             transform: translateY(-50%);
-            color: #9ca3af; /* Gray-400 */
+            color: #9ca3af;
             transition: color 0.3s ease-in-out;
         }
         .input-group input:focus + .input-icon {
-            color: #4f46e5; /* Indigo-600 for focus */
+            color: #4f46e5;
         }
         .input-group input {
-            padding-left: 3rem !important; /* Make space for the icon */
-            border-radius: 0.75rem; /* More rounded for softer look */
-            background-color: #f8fafc; /* Lightest gray background */
+            padding-left: 3rem !important;
+            border-radius: 0.75rem;
+            background-color: #f8fafc;
         }
-
-        /* Image container styling */
         .image-container {
-            flex-shrink: 0; /* Prevent image from shrinking */
-            width: 448px; /* Adjusted width to match form's max-w-md */
-            height: 672px; /* Adjusted height to maintain aspect ratio (1.5x width) */
-            border-radius: 1.5rem; /* Rounded corners for the image container */
-            overflow: hidden; /* Ensure image respects border-radius */
-            box-shadow: 0 25px 60px rgba(0, 0, 0, 0.2); /* Shadow matching the card */
-            margin-right: 2rem; /* Space between image and form */
+            flex-shrink: 0;
+            width: 448px;
+            height: 672px;
+            border-radius: 1.5rem;
+            overflow: hidden;
+            box-shadow: 0 25px 60px rgba(0, 0, 0, 0.2);
+            margin-right: 2rem;
             position: relative;
-            background-color: #1a202c; /* Fallback background for image container */
+            background-color: #1a202c;
             display: flex;
             justify-content: center;
             align-items: center;
         }
-
         .image-container img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Cover the container, cropping if necessary */
+            object-fit: cover;
             display: block;
         }
-
-        /* Responsive adjustments */
         @media (max-width: 768px) {
             .login-wrapper {
-                flex-direction: column; /* Stack image and form vertically on small screens */
+                flex-direction: column;
             }
             .image-container {
-                width: 100%; /* Full width on small screens */
-                height: 300px; /* Shorter height on small screens */
+                width: 100%;
+                height: 300px;
                 margin-right: 0;
-                margin-bottom: 2rem; /* Space below image */
+                margin-bottom: 2rem;
             }
             .modern-vibrant-card {
-                transform: rotateZ(0deg); /* No initial rotation on small screens */
+                transform: rotateZ(0deg);
             }
         }
     </style>
 </head>
 <body class="antialiased">
-
-    <!-- Overall Wrapper for Image and Login Form -->
     <div class="login-wrapper flex items-center justify-center p-4">
-        <!-- Image Container -->
         <div class="image-container">
             <img src="https://i.postimg.cc/tgCPs4pZ/Whats-App-Image-2025-07-19-at-11-25-06-AM.jpg" alt="User Profile Picture" onerror="this.onerror=null;this.src='https://placehold.co/350x550/000000/FFFFFF?text=Image+Not+Found';" />
         </div>
 
-        <!-- Login Form Container -->
         <div class="modern-vibrant-card p-12 rounded-2xl w-full max-w-md">
             <h2 class="text-5xl font-extrabold text-center mb-4 text-gray-800 leading-tight">Hello There!</h2>
             <p class="text-center text-gray-600 mb-10 text-lg">Let's get you signed in</p>
@@ -181,63 +160,40 @@
             <form id="loginForm" class="space-y-8">
                 <div class="input-group">
                     <label for="yourName" class="block text-sm font-medium text-gray-700 mb-2">Your Name</label>
-                    <input
-                        type="text"
-                        id="yourName"
-                        name="yourName"
-                        class="mt-1 block w-full px-4 py-3 border border-gray-300 text-gray-800 placeholder-gray-400 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition duration-300 ease-in-out text-base"
-                        placeholder="Enter your name"
-                        required
-                    >
+                    <input type="text" id="yourName" name="yourName" class="mt-1 block w-full px-4 py-3 border border-gray-300 text-gray-800 placeholder-gray-400 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition duration-300 ease-in-out text-base" placeholder="Enter your name" required>
                     <i class="fas fa-user input-icon"></i>
                 </div>
+
+                <!-- New Emp Code field -->
+                <div class="input-group">
+                    <label for="empCode" class="block text-sm font-medium text-gray-700 mb-2">Emp Code</label>
+                    <input type="text" id="empCode" name="empCode" class="mt-1 block w-full px-4 py-3 border border-gray-300 text-gray-800 placeholder-gray-400 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition duration-300 ease-in-out text-base" placeholder="Enter your employee code" required>
+                    <i class="fas fa-id-badge input-icon"></i>
+                </div>
+                <!-- End new field -->
+
                 <div class="input-group">
                     <label for="username" class="block text-sm font-medium text-gray-700 mb-2">Username or Email</label>
-                    <input
-                        type="text"
-                        id="username"
-                        name="username"
-                        class="mt-1 block w-full px-4 py-3 border border-gray-300 text-gray-800 placeholder-gray-400 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition duration-300 ease-in-out text-base"
-                        placeholder="Enter your username or email"
-                        required
-                    >
+                    <input type="text" id="username" name="username" class="mt-1 block w-full px-4 py-3 border border-gray-300 text-gray-800 placeholder-gray-400 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition duration-300 ease-in-out text-base" placeholder="Enter your username or email" required>
                     <i class="fas fa-envelope input-icon"></i>
                 </div>
+
                 <div class="input-group">
                     <label for="password" class="block text-sm font-medium text-gray-700 mb-2">Password</label>
-                    <input
-                        type="password"
-                        id="password"
-                        name="password"
-                        class="mt-1 block w-full px-4 py-3 border border-gray-300 text-gray-800 placeholder-gray-400 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition duration-300 ease-in-out text-base"
-                        placeholder="Enter your password"
-                        required
-                    >
+                    <input type="password" id="password" name="password" class="mt-1 block w-full px-4 py-3 border border-gray-300 text-gray-800 placeholder-gray-400 focus:outline-none focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 transition duration-300 ease-in-out text-base" placeholder="Enter your password" required>
                     <i class="fas fa-lock input-icon"></i>
                 </div>
 
                 <div class="flex items-center justify-between pt-2">
                     <div class="flex items-center">
-                        <input
-                            id="remember_me"
-                            name="remember_me"
-                            type="checkbox"
-                            class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded"
-                        >
-                        <label for="remember_me" class="ml-2 block text-sm text-gray-700">
-                            Remember me
-                        </label>
+                        <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
+                        <label for="remember_me" class="ml-2 block text-sm text-gray-700">Remember me</label>
                     </div>
-                    <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-700 transition duration-200 ease-in-out">
-                        Forgot password?
-                    </a>
+                    <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-700 transition duration-200 ease-in-out">Forgot password?</a>
                 </div>
 
                 <div>
-                    <button
-                        type="submit"
-                        class="w-full flex justify-center py-4 px-4 border border-transparent rounded-xl shadow-lg text-2xl font-bold text-white bg-gradient-to-r from-indigo-600 to-purple-700 hover:from-indigo-700 hover:to-purple-800 focus:outline-none focus:ring-4 focus:ring-offset-2 focus:ring-indigo-500 transition duration-300 ease-in-out transform hover:scale-105 active:scale-95"
-                    >
+                    <button type="submit" class="w-full flex justify-center py-4 px-4 border border-transparent rounded-xl shadow-lg text-2xl font-bold text-white bg-gradient-to-r from-indigo-600 to-purple-700 hover:from-indigo-700 hover:to-purple-800 focus:outline-none focus:ring-4 focus:ring-offset-2 focus:ring-indigo-500 transition duration-300 ease-in-out transform hover:scale-105 active:scale-95">
                         Log In
                     </button>
                 </div>
@@ -245,43 +201,32 @@
         </div>
     </div>
 
-    <!-- Message Box -->
     <div id="messageBox" class="message-box"></div>
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent default form submission
+            event.preventDefault(); 
 
             const yourName = document.getElementById('yourName').value;
+            const empCode = document.getElementById('empCode').value;
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
             const messageBox = document.getElementById('messageBox');
 
-            // Clear previous messages
             messageBox.textContent = '';
-            messageBox.className = 'message-box'; // Reset classes
+            messageBox.className = 'message-box'; 
 
-            // Simple validation (replace with actual authentication logic)
             if (username === 'user@example.com' && password === 'password123') {
-                showMessage('Login successful!', 'success');
-                // In a real application, you would redirect to a dashboard or home page
-                // window.location.href = '/dashboard';
+                showMessage('Login successful!\\nName: ' + yourName + '\\nEmp Code: ' + empCode, 'success');
             } else {
                 showMessage('Invalid username or password. Please try again.', 'error');
             }
         });
 
-        /**
-         * Displays a message in the message box.
-         * @param {string} message - The message to display.
-         * @param {'success'|'error'} type - The type of message (success or error).
-         */
         function showMessage(message, type) {
             const messageBox = document.getElementById('messageBox');
             messageBox.textContent = message;
             messageBox.classList.add('show', type);
-
-            // Hide the message after 3 seconds
             setTimeout(() => {
                 messageBox.classList.remove('show');
             }, 3000);
